--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: PluginCloak
 version: '${project.version}'
-main: me.eren.plugincloak.PluginCloak
+main: me.eren.plugincloak.bukkit.PluginCloak
 api-version: 1.19
 depend: ["ProtocolLib", "Vault"]
 authors: ["eren", "pesekjan"]
